--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
           <li>Контакты</li>
         </ul>
       </nav>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+380961111111">+38 096 111 11 11</a>
+      <div>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
+      </div>
     </header>
     <main>
       <section class="description">
@@ -25,38 +27,36 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section class="second-selection">
-        <article class="preference">
-          <ul> 
-            <li>
-              <h2>Внимание к деталям</h2>
-              <p>
-                Идейные соображения, а также начало повседневной работы по
-                формированию позиции.
-              </p>
-            </li>
-            <li>
-              <h2>Пунктуальность</h2>
-              <p>
-                Задача организации, в особенности же рамки и место обучения
-                кадров влечет за собой.
-              </p>
-            </li>
-            <li>
-              <h2>Планирование</h2>
-              <p>
-                Равным образом консультация с широким активом в значительной
-                степени обуславливает.
-              </p>
-            </li>
-            <li>
-              <h2>Современные технологии</h2>
-              <p>
-                Значимость этих проблем настолько очевидна, что реализация
-                плановых заданий.
-              </p>
-            </li>
-          </ul>
-        </article>
+        <ul>
+          <li>
+            <h3>Внимание к деталям</h3>
+            <p>
+              Идейные соображения, а также начало повседневной работы по
+              формированию позиции.
+            </p>
+          </li>
+          <li>
+            <h3>Пунктуальность</h3>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров
+              влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h3>Планирование</h3>
+            <p>
+              Равным образом консультация с широким активом в значительной
+              степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h3>Современные технологии</h3>
+            <p>
+              Значимость этих проблем настолько очевидна, что реализация
+              плановых заданий.
+            </p>
+          </li>
+        </ul>
         <div class="what-we-do">
           <h3>Чем мы занимаемся</h3>
           <ul class="what-we-do">
@@ -135,7 +135,7 @@
     </main>
     <footer class="footer">
       <div>
-        <h5>WebStudio</h5>
+        <a href="#">WebStudio</a>
         <address>г. Киев, пр-т Леси Украинки, 26</address>
         <a href="mailto:info@devstudio.com">info@devstudio.com</a>
         <a href="tel:+380961111111">+38 096 111 11 11</a>
