--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
   </head>
   <body>
     <header class="header">
-      <a href="#">WebStudio</a>
       <nav>
+         <a href="#">WebStudio</a>
         <ul>
-          <li>Студия</li>
-          <li>Портфолиио</li>
-          <li>Контакты</li>
+          <li><a href="">Студия</a></li>
+          <li><a href="">Портфолиио</a></li>
+          <li> <a href="">Контакты</a></li>
         </ul>
       </nav>
-      <div>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      </ul>
     </header>
     <main>
       <section class="description">
@@ -27,6 +27,7 @@
         <button type="button">Заказать услугу</button>
       </section>
       <section class="second-selection">
+        <h2>Наши приорететы</h2>
         <ul>
           <li>
             <h3>Внимание к деталям</h3>
@@ -57,8 +58,8 @@
             </p>
           </li>
         </ul>
-        <div class="what-we-do">
-          <h3>Чем мы занимаемся</h3>
+        <section class="what-we-do">
+          <h4>Чем мы занимаемся</h4>
           <ul class="what-we-do">
             <li>
               <img
@@ -85,7 +86,7 @@
               />
             </li>
           </ul>
-        </div>
+        </section>
       </section>
       <section class="team">
         <h2>Наша команда</h2>
@@ -134,12 +135,14 @@
       </section>
     </main>
     <footer class="footer">
-      <div>
         <a href="#">WebStudio</a>
-        <address>г. Киев, пр-т Леси Украинки, 26</address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
-      </div>
+        <address>
+          <ul>
+            <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+          </address>
     </footer>
   </body>
 </html>
